--- a/lab4/docker-compose.yml
+++ b/lab4/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     web:
         image: nginx:latest
         ports:
-            - "8081:80"
+            - "8080:80"
         volumes:
             - ./code:/code
             - ./site.conf:/etc/nginx/conf.d/site.conf
         links:
             - php
     php:
-        image: php:8-fpm
+        build: ./
         volumes:
             - ./code:/code
